classDiagram
    direction TB

    class DashboardController {
        <<Controller>>
        +getOverview() KPIData
        +getRevenueChart(period) ChartData
        +getOrdersByStatus() ChartData
        +getTopPlats(limit) Plat[]
    }

    class FinanceService {
        <<Service>>
        +getTransactions(filters) Transaction[]
        +createExpense(data) Expense
        +getBalance(period) BalanceReport
        +getCashFlow(period) CashFlowData
    }

    class DocumentService {
        <<Service>>
        +generateInvoicePDF(orderId) Blob
        +generatePurchaseOrderPDF(poId) Blob
        +generateCreditNote(invoiceId) Blob
    }

    class Expense {
        -id : String
        -title : String
        -category : String
        -amount : Decimal
        -expenseDate : DateTime
        -supplierName : String
        -paymentMethod : String
        -status : ExpenseStatus
        +approve() void
        +reject() void
        +pay() void
    }

    class ExpenseStatus {
        <<enumeration>>
        DRAFT
        APPROVED
        PAID
        REJECTED
    }

    class EventInvoice {
        -id : String
        -invoiceNumber : String
        -totalAmount : Decimal
        -status : EventInvoiceStatus
        -dueDate : DateTime
        +send() void
        +markPaid() void
    }

    class EventInvoicePayment {
        -id : String
        -amount : Decimal
        -method : PaymentMethod
        -status : PaymentStatus
        +process() void
    }

    class AuditLog {
        -id : String
        -module : String
        -action : String
        -entityType : String
        -entityId : String
        -message : String
        -actorId : String
        -timestamp : DateTime
    }

    DashboardController ..> FinanceService : utilise
    DashboardController ..> DocumentService : utilise
    FinanceService --> Expense : gère
    Expense --> ExpenseStatus : a
    EventInvoice "1" *-- "0..1" EventInvoicePayment : reçoit
    FinanceService ..> AuditLog : journalise
